--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahdi Hasan Portfolio</title>
-</head>
-<body>
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <!-- open sans font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> 
+
+<body class="open-sans-font">
+    <header>
+        <nav>
+            <!-- logo -->
+            <div class="logo">
+                <h2>Mah<span class="color-orange">d</span>i</h2>
+            </div>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="primary-btn">Hire Me</button></li>
+                
+            </ul>
+        </nav>
+
     
+    </header>
 </body>
 </html>
