added banner section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
             </ul>
         </nav>
 
-    
+        <!-- hero area -->
+        <section id="banner-container">
+            <!-- banner-content -->
+             <div class="banner-content">
+                <h2>Hi, i am</h2>
+                <h1>Mahdi Hasan</h1>
+                <p class="banner-sub-title">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <div class="banner-btn">
+                    <button class="primary-btn">Download CV</button>
+                    <button class="primary-btn">Contact</button>
+                </div>
+             </div>
+             <!-- banner img -->
+              <figure>
+                <img src="images/hardy.png" alt="">
+              </figure>
+        </section>
     </header>
 </body>
 </html>
