--- a/index.html
+++ b/index.html
@@ -45,5 +45,45 @@
               </figure>
         </section>
     </header>
+
+    <main>
+
+        <!-- about section -->
+         <section class="about">
+            <div class="about-container">
+
+             <div class="section-heading">
+                <h2 class="title">About Me</h2>
+                <p class="sub-title">
+                    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+                </p>
+             </div>
+                <!-- about info -->
+                 <div class="about-info">
+
+                   <div class="info-card">
+                     <p>Name:</p>
+                    <h5>Mahdi Hasan</h5>
+                   </div>
+
+                   <div class="info-card">
+                    <p> Email:</p>
+                    <h5>mahdihasan.code@gmail.com</h5>
+                   </div>
+
+                   <div class="info-card">
+                    <p>Date of birth:</p>
+                    <h5>06 December 2002</h5>
+                   </div>
+
+                   <div class="info-card">
+                    <p>from:</p>
+                    <h5>Noakhali</h5>
+                   </div>
+                 </div>
+            </div>
+         </section>
+
+    </main>
 </body>
 </html>
