--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
 
         <!-- about section -->
-         <section class="about">
+         <section id="about">
             <div class="about-container">
 
              <div class="section-heading">
@@ -83,6 +83,57 @@
                  </div>
             </div>
          </section>
+
+         <!-- skills section -->
+          <section id="skills">
+
+            <div class="skills-container">
+
+                <!--skills heading -->
+                <div class="section-heading">
+                    <h2 class="title">What I do</h2>
+                    <p class="sub-title">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                </div>
+
+                <!-- skills card box-->
+
+                <div class="skills-content">
+
+                    <!-- card -->
+                     <div class="skill-card">
+                        <img src="images/icons/js.png" alt="">
+                        <h3>Vanilla JavaScript</h3>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                     </div>
+
+                     <div class="skill-card">
+                        <img src="images/icons/react.png" alt="">
+                        <h3>React</h3>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                     </div>
+                     <div class="skill-card">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <h3>Node.js</h3>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                     </div>
+                     <div class="skill-card">
+                        <img src="images/icons/mongo.png" alt="">
+                        <h3>MongoDB</h3>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                     </div>
+                </div>
+            </div>
+          </section>
+
+     
 
     </main>
 </body>
