--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> 
 
+    <!-- font awesome kit -->
+    <script src="https://kit.fontawesome.com/4611c18e4f.js" crossorigin="anonymous"></script>
+
 <body class="open-sans-font">
     <header>
         <nav>
@@ -35,8 +38,8 @@
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
                 <div class="banner-btn">
-                    <button class="primary-btn">Download CV</button>
-                    <button class="primary-btn">Contact</button>
+                    <button class="primary-btn"><span style="margin-right: 10px;"><i class="fa-solid fa-download"></i></span>Download CV</button>
+                    <button class="primary-btn"><span style="margin-right: 10px;"><i class="fa-solid fa-phone"></i></span>Contact</button>
                 </div>
              </div>
              <!-- banner img -->
@@ -209,12 +212,42 @@
              </div>
 
              <div class="resume-btn">
-                <button class="primary-btn">
+                <button class="primary-btn"><i class="fa-solid fa-download"></i>
                 Download CV
                 </button>
              </div>
          </section>
 
     </main>
+
+    <!-- footer part -->
+     <footer class="footer">
+        <div class="footer-container">
+            <div class="connect">
+                <h2>Lets Connect</h2>
+                <p>
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+                </p>
+                <div class="link">
+                    <img src="./images/icons/facebook.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/insta.png" alt="">
+                </div>
+            </div>
+            <div class="message">
+                <h2>Let’s Message me</h2>
+                <fieldset>
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="40" rows="6">message</textarea>
+                    <div>
+                        <button class="primary-btn">
+                            Submit
+                        </button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+     </footer>
 </body>
 </html>
