mobile responsive design complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/4611c18e4f.js" crossorigin="anonymous"></script>
 
 <body class="open-sans-font">
-    <header>
+    <header class="">
         <nav>
             <!-- logo -->
             <div class="logo">
@@ -221,7 +221,7 @@
     </main>
 
     <!-- footer part -->
-     <footer class="footer">
+     <footer class="footer hide">
         <div class="footer-container">
             <div class="connect">
                 <h2>Lets Connect</h2>
