added  responsive footer

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </main>
 
     <!-- footer part -->
-     <footer class="footer hide">
+     <footer class="footer">
         <div class="footer-container">
             <div class="connect">
                 <h2>Lets Connect</h2>
